--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -43,7 +43,6 @@
     backdrop-filter: blur(0px); /* aqui só se quiser efeito de desfoque de elementos internos */
   }
   
-  
   .hero-section::after {
     content: "";
     position: absolute;
@@ -54,4 +53,41 @@
     background: linear-gradient(to bottom, rgba(26, 26, 46, 0) 0%, #1a1a2e 100%);
     pointer-events: none;
   }
+.user-list-box {
+  background-color: #1e1e1e;
+  color: white;
+  padding: 20px;
+  border-radius: 12px;
+  width: 400px;
+  margin: 20px auto;
+  box-shadow: 0px 4px 16px rgba(0,0,0,0.3);
+}
+
+.user-list-box ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.user-list-box li {
+  padding: 8px 0;
+  border-bottom: 1px solid #444;
+}
+.action-button {
+  padding: 5px 10px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.edit-button {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.delete-button {
+  background-color: #e74c3c;
+  color: white;
+}
   
